--- a/Project/index.html
+++ b/Project/index.html
@@ -140,22 +140,22 @@
             alt=""
           />
           <img
-            class="absolute top-[40px] right-[41px]"
+            class="absolute top-[40px] right-[27px]"
             src="images/circlesmall.svg"
             alt=""
           />
           <img
-            class="absolute top-[65px] left-[24px]"
+            class="absolute top-[65px] left-[8px]"
             src="images/vectorsmall.svg"
             alt=""
           />
           <img
-            class="absolute right-[50px] top-[388px]"
+            class="absolute right-[35px] top-[365px]"
             src="images/addsmall.png"
             alt=""
           />
           <img
-            class="absolute left-[24px] top-[400px]"
+            class="absolute left-[22px] top-[400px]"
             src="images/playsmall.svg"
             alt=""
           />
@@ -367,7 +367,7 @@
           alt=""
         />
         <img
-          class="absolute sm:visible md:hidden left-[-5px] top-[-75px]"
+          class="absolute sm:visible md:hidden left-[20px] top-[-75px]"
           src="images/playsmall.svg"
           alt=""
         />
@@ -484,14 +484,14 @@
         >
           <div>
             <h1
-              class="text-[#fff] sm:px-6 md:max-w-[826px] md:text-[39px] md:w-full font-graphik-bold lg:text-[60px]  sm:w-full sm:text-[36px] sm:font-bold sm:leading-[150%] md:font-bold md:leading-normal"
+              class="text-[#fff] sm:mt-[80px] sm:px-6 md:max-w-[826px] md:text-[39px] md:w-full font-graphik-bold lg:text-[60px]  sm:w-full sm:text-[36px] sm:font-bold sm:leading-[150%] md:font-bold md:leading-normal"
             >
               Contact us for the service you want to use
             </h1>
           </div>
           <div class="sm:flex sm:px-6 md:m-0 md:self-center md:flex-none sm:self-start">
             <button
-              class="md:w-[201px] sm:w-[166px] sm:pl-[32px] sm:pr-[36px] sm:h-[44px] md:h-[60px] rounded-[5px] hover:bg-[gray] bg-[#5454D4] text-white flex items-center"
+              class="md:w-[201px] sm:mb-[80px] sm:w-[166px] sm:pl-[32px] sm:pr-[36px] sm:h-[44px] md:h-[60px] rounded-[5px] hover:bg-[gray] bg-[#5454D4] text-white flex items-center"
             >
               <p
                 class="max-w-[201px] w-full  sm:text-[16px] md:text-[21px] font-semibold leading-normal font-nunito-sans"
@@ -516,7 +516,7 @@
             alt=""
           />
           <img
-            class="bottom-[-60px] sm:visible md:hidden absolute left-[10px]"
+            class="bottom-[11.68px] sm:visible md:hidden absolute left-[10px]"
             src="images/circlesmall.svg"
             alt=""
           />
