--- a/Project/index.html
+++ b/Project/index.html
@@ -480,7 +480,7 @@
       <!-- Last Section -->
       <div class="w-full bg-cbgg mb-[50px]">
         <div
-          class="md:flex md:text-center mx-auto md:max-w-[826px]  w-full md:h-[70vh] lg:text-start lg:flex-row sm:flex sm:flex-col md:flex-col sm:items-center relative lg:max-w-[1440px] lg:w-full lg:h-[40vh] lg:gap-[173px] sm:gap-[50px] justify-center items-center"
+          class="md:flex md:text-center mx-auto md:max-w-[826px]  w-full md:h-[70vh] md:min-h-[500px] lg:text-start lg:flex-row sm:flex sm:flex-col md:flex-col sm:items-center relative lg:max-w-[1440px] lg:w-full lg:h-[40vh] lg:gap-[173px] sm:gap-[50px] justify-center items-center"
         >
           <div>
             <h1
